<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:id="@+id/layoutHolder"
    android:orientation="vertical"
>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_fab_shadow_mid_color"
        android:id="@+id/middleSection"
        android:layout_weight="2">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/emotionTitle"
            android:text="@string/emotion"
            android:textSize="@dimen/abc_action_bar_progress_bar_size"
            android:background="@color/accent_material_dark"
/>

        <FrameLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false">


            <TextView
                android:id="@+id/textView0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:button="@android:color/transparent"
                android:clickable="false"
                android:gravity="center"
                android:textSize="60dp"
                android:visibility="visible"
                android:text="@string/happy"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:button="@android:color/transparent"
                android:clickable="false"
                android:gravity="center"
                android:onClick="onEmoChoice"
                android:textSize="60dp"
                android:text="@string/surprised"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:button="@android:color/transparent"
                android:layout_weight="1"
                android:clickable="false"
                android:gravity="center"
                android:onClick="onEmoChoice"
                android:textSize="60dp"
                android:text="@string/angry"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="invisible" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:button="@android:color/transparent"
                    android:clickable="false"
                    android:gravity="center"
                    android:onClick="onEmoChoice"
                    android:textSize="60dp"
                    android:visibility="invisible"
                    android:text="@string/afraid"
                    android:textAppearance="?android:attr/textAppearanceLarge" />


                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:button="@android:color/transparent"
                    android:clickable="false"
                    android:gravity="center"
                    android:onClick="onEmoChoice"
                    android:textSize="60dp"
                    android:visibility="invisible"
                    android:text="@string/disgusted"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:button="@android:color/transparent"
                    android:clickable="false"
                    android:gravity="center"
                    android:onClick="onEmoChoice"
                    android:textSize="60dp"
                    android:visibility="invisible"
                    android:text="@string/sad"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:button="@android:color/transparent"
                    android:clickable="false"
                    android:gravity="center"
                    android:onClick="onEmoChoice"
                    android:textSize="60dp"
                    android:visibility="invisible"
                    android:text="@string/calm"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:button="@android:color/transparent"
                    android:clickable="false"
                    android:gravity="center"
                    android:onClick="onEmoChoice"
                    android:textSize="60dp"
                    android:visibility="invisible"
                    android:text="@string/neutral"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomSection"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/degreeTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/accent_material_dark"
            android:text="@string/choosevariation"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/abc_action_bar_progress_bar_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/variationRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:alpha="0.9"
                android:background="@color/abc_search_url_text_normal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/zero"
                    android:layout_width="@dimen/radio_button"
                    android:layout_height="@dimen/radio_button"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@drawable/buttonbackground"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:onClick="onVariationChoice"
                    android:text="@string/zero"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <RadioButton
                    android:id="@+id/one"
                    android:layout_width="@dimen/radio_button"
                    android:layout_height="@dimen/radio_button"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@drawable/buttonbackground"
                    android:button="@android:color/transparent"
                    android:checked="false"
                    android:gravity="center"
                    android:onClick="onVariationChoice"
                    android:text="@string/one"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <RadioButton
                    android:id="@+id/two"
                    android:layout_width="@dimen/radio_button"
                    android:layout_height="@dimen/radio_button"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@drawable/buttonbackground"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:onClick="onVariationChoice"
                    android:text="@string/two"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <RadioButton
                    android:id="@+id/three"
                    android:layout_width="@dimen/radio_button"
                    android:layout_height="@dimen/radio_button"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@drawable/buttonbackground"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:onClick="onVariationChoice"
                    android:text="@string/three"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <RadioButton
                    android:id="@+id/four"
                    android:layout_width="@dimen/radio_button"
                    android:layout_height="@dimen/radio_button"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@drawable/buttonbackground"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:onClick="onVariationChoice"
                    android:text="@string/four"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </RadioGroup>

            <Button
                android:id="@+id/playButton"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:allowUndo="false"
                android:onClick="onProceedClick"
                android:text="@string/onproceed"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_gravity="center"
        >


        <TextView
            android:id="@+id/logSigma"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/logSigma"
            android:textColor="#000000"
            android:textSize="@dimen/abc_action_bar_progress_bar_size"
            android:background="@color/accent_material_dark"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="0.5"/>


        <SeekBar
            android:id="@+id/logSeek"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1.5"
            android:background="@color/accent_material_dark"
            android:max="500" />


        <TextView
            android:id="@+id/textSigma"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="-1.0"
            android:maxLength="5"
            android:textColor="#000000"
            android:textSize="30sp"

            android:background="@color/accent_material_dark"
            android:layout_weight="0.5"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:id="@+id/topSection"
        android:layout_weight="2">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/onaccept"
            android:id="@+id/nextButton"
            android:layout_weight="0.3"
            android:layout_gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:onClick="onAcceptClick" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/restartSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:id="@+id/restartLeftSection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/countRestView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creatorEmail"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/restartRightSection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/restartButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRestartClick"
                android:text="@string/restart"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
